--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+// @import './styles/mixins';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body, .example-container, mat-drawer-container {
+  height: 100%;
+  margin: 0;
+}
+
+*{
+    box-sizing: border-box;
+}
+
