--- a/src/app/components/searched-item/searched-item.component.html
+++ b/src/app/components/searched-item/searched-item.component.html
@@ -3,8 +3,15 @@
     <img src="{{ recipeItem.strMealThumb }}" alt="{{ recipeItem.strMeal }}" />
   </div>
   <div class="content">
-    <h2 class="title"><a class="read-more" [routerLink]="path">{{ recipeItem.strMeal }}</a></h2>
+    <h2 class="title">{{ recipeItem.strMeal }}</h2>
     <p class="meta">October 9, 2023 / <span class="author">Lucid Themes</span></p>
+    @if(recipeItem.strInstructions){
+      <p class="description">
+        {{ recipeItem.strInstructions | ellipsisText }}
+      </p>
+    }
+    <a class="read-more" [routerLink]="path">Continue Reading</a>
   </div>
 </div>
+
 
