--- a/src/app/components/category-card/category-card.component.html
+++ b/src/app/components/category-card/category-card.component.html
@@ -1,8 +1,12 @@
   <div class="card">
     <img [src]="category.strCategoryThumb" [alt]="category.strCategory" />
     <div class="content">
-      <h3>{{ category.strCategory }}</h3>
-      <p>{{ category.strCategoryDescription | ellipsisText}}</p>
+      <h3><a [routerLink]="['/', category.strCategory, 'recipes']">{{ category.strCategory }}</a></h3>
+      @if(!fullDesc){
+        <p>{{ category.strCategoryDescription | ellipsisText}}</p>
+      }@else{
+        <p>{{ category.strCategoryDescription }}</p>
+      }
     </div>
   </div>
 
