--- a/src/app/components/recipe-item/recipe-item.component.scss
+++ b/src/app/components/recipe-item/recipe-item.component.scss
@@ -1,63 +1,47 @@
 @use './../../../styles/mixins' as *;
 
 .recipe-card {
-  display: flex;
-  gap: 20px;
-  padding: 20px;
-  max-width: 800px;
-  border-bottom: 1px solid #eee;
-  font-family: 'Segoe UI', sans-serif;
+  // display: flex;
+  // gap: 20px;
+  // padding: 20px;
+  // max-width: 800px;
+  // border-bottom: 1px solid #eee;
+  // font-family: 'Segoe UI', sans-serif;
 
   .image-wrapper {
-    flex-shrink: 0;
+    width: 100%;
+    // max-width: 300px;
 
     img {
-      width: 200px;
+      width: 100%;
       height: auto;
       object-fit: cover;
       border-radius: 4px;
+      display: block;
     }
   }
 
   .content {
-    flex: 1;
 
     .title {
       font-size: 1.5rem;
-      font-weight: bold;
-      margin: 0 0 10px;
+      font-weight: 600;
+      margin: 8px 0;
+      a{
+        text-decoration: none;
+        color: inherit;
+        display: block;
+      }
     }
 
     .meta {
       font-size: 0.9rem;
       color: #888;
-      margin-bottom: 15px;
+      margin: 0 0 15px;
 
       .author {
         color: #777;
       }
-    }
-
-    .description {
-      font-size: 1rem;
-      color: #333;
-      line-height: 1.5;
-      margin-bottom: 20px;
-    }
-
-    .read-more {
-      @include style-button;
-      // padding: 10px 20px;
-      // background-color: transparent;
-      // border: 1px solid #ccc;
-      // cursor: pointer;
-      // text-transform: uppercase;
-      // font-size: 0.85rem;
-      // letter-spacing: 1px;
-
-      // &:hover {
-      //   background-color: #f7f7f7;
-      // }
     }
   }
 }
