--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <h3>tags</h3>
     <div class="tags">
         @for(category of categoriesList(); track category.idCategory){
-            <a href="" class="tag">{{ category.strCategory }}</a>
+            <a [routerLink]="['/', category.strCategory, 'recipes']" class="tag">{{ category.strCategory }}</a>
         }
     </div>
 </section>
