--- a/src/app/pages/recipe/recipe.component.scss
+++ b/src/app/pages/recipe/recipe.component.scss
@@ -1,19 +1,42 @@
-.flex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    h2{
-        text-align: center;
+@use '../../../styles/mixins' as *;
+
+section{
+    
+    .flex{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        h2{
+            text-align: center;
+        }
+    }
+
+    img{
+        width: 100%;
+    }
+    h3{
+        @include heads-style;
+        margin-bottom: 16px;
+        margin-top: 32px;
+    }
+    table{
+        border-collapse: collapse;
+        background: #fff;
+        td{
+            // border: 1px solid #ccc;
+            border: 1px solid #cccccc75;
+            padding: 4px 16px;
+            color: #333;
+            font-family: "Segoe UI", sans-serif;
+        }
+    }
+
+    ::ng-deep thead{
+        display: none;
+    }
+    p{
+        line-height: 2;
+        margin-top: 0;
     }
 }
 
-img{
-    width: 100%;
-}
-table{
-    border-collapse: collapse;
-    td{
-        border: 1px solid #ccc;
-        padding: 12px 16px;
-    }
-}
