--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,6 +16,19 @@
         text-transform: uppercase;
     }
 }
+@mixin heads-style{
+  font-size: 12px;
+  color: #111;
+  line-height: 15px;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: .5px;
+  display: inline-block;
+  border-bottom: 1px solid #ba005c;
+  margin:  0 0 25px 0;
+  padding-bottom: 7px;
+}
 @mixin style-input-mat{
   background-color: transparent;
   border: 1px solid #ccc;
