make scss variables

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+@use './../styles/variables' as *;
 @use './../styles/mixins' as *;
 
 .container{
@@ -17,10 +18,10 @@
 
 mat-drawer-container{
     height: 100%;
-    background-color: #fff;
+    background-color: $whiteColor;
 }
 mat-drawer{
-    background-color: #fff;
+    background-color: $whiteColor;
     width: 250px;
     box-shadow: 5px 0 20px -3px rgba(117, 117, 117, .2)
 }
@@ -35,14 +36,14 @@ nav ul{
         padding: 14px 0 14px 15px;
         text-transform: uppercase;
         font-size: 11px;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px solid $borderColor;
         a{
             display: inline-block;
             width: 100%;
             text-decoration: none;
-            color: #333;
+            color: $textColorBlackLight;
             &:hover, &.active{
-                color: #ba005c;
+                color: $mainRedColor;
             }
         }
     }
