--- a/src/app/components/category-card/category-card.component.scss
+++ b/src/app/components/category-card/category-card.component.scss
@@ -1,15 +1,17 @@
+@use '../../../styles/variables' as *;
+
 .card {
 //   width: 300px;
 width: 100%;
 height: 100%;
 // max-height: 420px;
-  background: #ffffff;
-  font-family: "Segoe UI", sans-serif;
+  background: $whiteColor;
+  font-family: $fontFamily;
 //   border-radius: 12px;
   overflow: hidden;
 //   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 // box-shadow: 0 4px 20px rgb(186, 0, 92, 0.1);
-border: 1px solid #eee;;
+border: 1px solid $borderColor;;
 //   transition: transform 0.3s ease;
 //   text-align: center;
 
@@ -34,9 +36,9 @@ border: 1px solid #eee;;
 
     h3 {
       margin: 0 0 0.5rem;
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: #333;
+      font-size: $titleSize;
+      font-weight: $fontWeightBold;
+      color: $textColorBlackLight;
       a{
         display: block;
         text-decoration: none;
@@ -45,8 +47,7 @@ border: 1px solid #eee;;
     }
 
     p {
-      font-size: 1rem;
-        color: #333;
+        color: $textColorBlackLight;
         line-height: 1.5;
     }
   }
