--- a/src/app/components/searched-item/searched-item.component.scss
+++ b/src/app/components/searched-item/searched-item.component.scss
@@ -1,3 +1,4 @@
+@use './../../../styles/variables' as *;
 @use './../../../styles/mixins' as *;
 
 .recipe-card {
@@ -5,8 +6,8 @@
   gap: 20px;
   padding: 20px;
   max-width: 800px;
-  border-bottom: 1px solid #eee;
-  font-family: 'Segoe UI', sans-serif;
+  border-bottom: 1px solid $borderColor;
+  font-family: $fontFamily;
 
   .image-wrapper {
     flex-shrink: 0;
@@ -23,13 +24,13 @@
     flex: 1;
 
     .title {
-      font-size: 1.5rem;
+      font-size: $titleSize;
       font-weight: bold;
       margin: 0 0 10px;
     }
 
     .meta {
-      font-size: 0.9rem;
+      font-size: $metaSize;
       color: #888;
       margin-bottom: 15px;
 
@@ -39,8 +40,7 @@
     }
 
     .description {
-      font-size: 1rem;
-      color: #333;
+      color: $textColorBlackLight;
       line-height: 1.5;
       margin-bottom: 20px;
     }
