--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,5 @@
+@use './variables' as *;
+
 @mixin style-input{
     // height: 50px;
     // padding: 0 16px;
@@ -6,8 +8,8 @@
     // background-color: transparent;
     padding: 10px 20px;
     background-color: transparent;
-    border: 1px solid #ccc;
-    font-size: 0.85rem;
+    border: 1px solid $grayColorLight;
+    font-size: $fieldSize;
     letter-spacing: 1px;
     // margin-bottom: 15px;
     width: 100%;
@@ -18,21 +20,21 @@
 }
 @mixin heads-style{
   font-size: 12px;
-  color: #111;
+  color: $textColorBlack;
   line-height: 15px;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: .5px;
   display: inline-block;
-  border-bottom: 1px solid #ba005c;
+  border-bottom: 1px solid $mainRedColor;
   margin:  0 0 25px 0;
   padding-bottom: 7px;
 }
 @mixin style-input-mat{
   background-color: transparent;
-  border: 1px solid #ccc;
-  font-size: 0.85rem;
+  border: 1px solid $grayColorLight;
+  font-size: $fieldSize;
   letter-spacing: 1px;
 }
 
@@ -41,9 +43,9 @@
   width: 100% !important;
   input{
       // padding: 0 20px !important;
-    color: #757575 !important;
+    color: $grayColorDark !important;
       &::placeholder{
-          color: #ccc !important;
+          color: $grayColorLight !important;
       }
   }
   // label{
@@ -69,7 +71,7 @@
         }
     }
     ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label{
-      font-size: 0.85rem !important;
+      font-size: $fieldSize !important;
     }
     ::ng-deep .mdc-line-ripple::before{
         border-bottom: 0 !important;
@@ -88,10 +90,10 @@
 @mixin style-button{
      padding: 10px 20px;
       background-color: transparent;
-      border: 1px solid #ccc;
+      border: 1px solid $grayColorLight;
       cursor: pointer;
       text-transform: uppercase;
-      font-size: 0.85rem;
+      font-size: $fieldSize;
       letter-spacing: 1px;
     //   color: #ba005c;
 
