--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,4 +1,7 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="form">
+    @if(isError()){
+        <div class="error"><mat-icon>error</mat-icon> invalid username or password</div>
+    }
     <input type="text" placeholder="username" formControlName = "username" required>
     <input type="password" placeholder="password" formControlName = "password" required minlength="8">
     <button type="submit" [disabled]="!form.valid">Login</button>
