--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -1,5 +1,9 @@
 @use './../../../../styles/mixins' as *;
 
+form{
+    padding-top: 60px;
+    position: relative;
+}
 input{
     @include style-input;
     margin-bottom: 25px;
