--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -1,3 +1,4 @@
+@use './../../../../styles/variables' as *;
 @use './../../../../styles/mixins' as *;
 
 form{
@@ -12,4 +13,13 @@ button{
     @include style-button;
     display: block;
     margin-bottom: 25px;
+    padding: 0 !important;
+}
+.text{
+    width: 100%;
+    height: 100%;
+    background-color: $mainRedColor;
+    color: $whiteColor;
+    padding: 10px 20px;
+
 }
