apply unit testing

--- a/src/app/components/category-card/category-card.component.html
+++ b/src/app/components/category-card/category-card.component.html
@@ -1,3 +1,4 @@
+@if(category){
   <div class="card">
     <img [src]="category.strCategoryThumb" [alt]="category.strCategory" />
     <div class="content">
@@ -9,4 +10,4 @@
       }
     </div>
   </div>
-
+}
