--- a/src/app/components/recipe-item/recipe-item.component.html
+++ b/src/app/components/recipe-item/recipe-item.component.html
@@ -1,10 +1,11 @@
-<div class="recipe-card">
-  <div class="image-wrapper">
-    <img src="{{ recipeItem.strMealThumb }}" alt="{{ recipeItem.strMeal }}" />
+@if(recipeItem){
+  <div class="recipe-card">
+    <div class="image-wrapper">
+      <img src="{{ recipeItem.strMealThumb }}" alt="{{ recipeItem.strMeal }}" />
+    </div>
+    <div class="content">
+      <h2 class="title"><a class="read-more" [routerLink]="path">{{ recipeItem.strMeal }}</a></h2>
+      <p class="meta">October 9, 2023 / <span class="author">Lucid Themes</span></p>
+    </div>
   </div>
-  <div class="content">
-    <h2 class="title"><a class="read-more" [routerLink]="path">{{ recipeItem.strMeal }}</a></h2>
-    <p class="meta">October 9, 2023 / <span class="author">Lucid Themes</span></p>
-  </div>
-</div>
-
+}
