--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -12,24 +12,15 @@
             <img src="{{recipe().strMealThumb}}" alt="">
         </div>
         <h3>ingredients</h3>
-        <table mat-table [dataSource]="dataSource()" class="mat-elevation-z8">
+        <!-- <table mat-table [dataSource]="dataSource()" class="mat-elevation-z8">
 
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
 
-  <!-- Position Column -->
-  <!-- <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container> -->
-
-  <!-- Ingredient Column -->
   <ng-container matColumnDef="ingredient">
     <th mat-header-cell *matHeaderCellDef> Ingredient </th>
     <td mat-cell *matCellDef="let element"> {{element.ingredient}} </td>
   </ng-container>
 
-  <!-- Measure Column -->
+  
   <ng-container matColumnDef="measure">
     <th mat-header-cell *matHeaderCellDef> Measure </th>
     <td mat-cell *matCellDef="let element"> {{element.measure}} </td>
@@ -37,20 +28,9 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+</table> -->
 
-        <!-- <table>
-            <tbody>
-                <tr>
-                    @for(ingredient of ingrediants; track index){
-                        <td>{{ingredient}}</td>
-                    }
-                    @for(measure of measures; track index){
-                        <td>{{measure}}</td>
-                    }
-                </tr>
-            </tbody>
-        </table> -->
+        
         <h3>intructions</h3>
         <p>{{recipe().strInstructions}}</p>
     </section>
