--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,38 @@
-<app-wrapper>
-  <div>
-    @for(category of allCategories(); track category.idCategory){
-        <section>
-            <div class="flex">
-                <h2 #categoryTitle>{{category.strCategory}}</h2>
-                <a [routerLink]="[category.strCategory, 'recipes']">view more</a>
+<section id="hero">
+    <div class="container">
+        <article>
+            <div>
+                <h3>welcome</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui dolores quam, quod, laudantium officiis minima architecto itaque cum velit illum omnis corrupti! Soluta voluptatum at aspernatur, nesciunt quis magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui dolores quam, quod, laudantium officiis minima architecto itaque cum velit illum omnis corrupti! Soluta voluptatum at aspernatur, nesciunt quis magnam!</p>
             </div>
+        </article>
+    </div>
+    <!-- hero section -->
+</section>
+<!-- @defer(on viewport){ -->
+    <section id="categories">
+        <div class="container">
+        <app-categories-section />
+        </div>
+    </section>
+<!-- }@placeholder{
+    <h2>categories</h2>
+} -->
+
+<!-- @defer (on viewport){ -->
+    <section id="recent">
+        <div class="container">
+            <h2>recent recipes</h2>
             <ul>
-                @for(recipe of getRecipes(category.strCategory); track recipe.idMeal){
-                    <li>
-                        <app-recipe-item [recipeItem]="recipe"></app-recipe-item>
+            @for (recipe of recentRecipes; track recipe.idMeal) {
+                    <li class="recipe-li">
+                        <app-recipe-item [recipeItem]="recipe" />
                     </li>
                 }
             </ul>
-        </section>
-    }
-  </div>
-</app-wrapper>
+        </div>
+    </section>
+<!-- }@placeholder{
+    <h2>Recent Recipes</h2>
+} -->
+
