--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,30 +1,62 @@
-section{
-    border-bottom: 1px solid #ccc;
+@use '../../../styles/variables' as *;
+@use '../../../styles/mixins' as *;
 
-    .flex{
+.container{
+    @include container;
+}
+
+#hero{
+    height: calc(100vh - 96px);
+    // background-image: url('https://www.errenskitchen.com/wp-content/uploads/2020/02/easy-chocolate-dessert-1-1.jpg');
+    background-image: url('https://www.foodandwine.com/thmb/ckc6L6xKox0WfpfO6dMkuVGPQOY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Angel-Food-Cake-with-Three-Berry-Compote-FT-RECIPE0323-541a780b871441e0ab14383ee38acc44.jpg');
+    background-size: cover;
+
+    .container{
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
+        // justify-content: flex-end;
+        height: 100%;
+        padding-bottom: 60px;
+    }
+    article{
+        background-color: $whiteColor;
+        padding: 16px !important;
+        // width: 400px;
+        text-align: center;
+        div{
+            border: 1px solid $borderColor;
+            padding: 24px;
+            h3{
+                @include heads-style;
+            }
+            
+            p{
+                margin: 0;
+                // text-align: justify;
+            }
+        }
+       
+    }
+}
 
-        h2{
-            text-transform: capitalize;
-        }
-        a{
-            display: block;
-        }
+#categories{
+    padding: 80px 0;
+   
+}
+
+#recent{
+    h2{
+        @include heads-style;
     }
     ul{
         list-style: none;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap:32px;
-
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+        
         @media (min-width: 992px){
-            grid-template-columns: repeat(2, 1fr);
-        }
-        @media (min-width: 1200px) {
-            grid-template-columns: repeat(3, 1fr);
+             grid-template-columns: repeat(4, 1fr);
         }
     }
 }
