--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,8 @@
     <button mat-icon-button (click)="goToFav()" class="favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+    <button mat-icon-button (click)="goToAuth()" class="profile-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>account_circle</mat-icon>
     </button>
   </mat-toolbar>
   <mat-toolbar class="nav-bar">
@@ -22,7 +22,7 @@
   </mat-form-field> -->
     <span class="example-spacer"></span>
     <button mat-icon-button class="menu-icon" (click)="onToggle()" aria-label="Example icon-button with heart icon">
-      <mat-icon>{{ isOpen ? 'close' : 'menu' }}</mat-icon>
+      <mat-icon>menu</mat-icon>
     </button>
   </mat-toolbar>
 </div>
