--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,11 +6,11 @@
 }
 
 #hero{
-    height: calc(100vh - 96px);
+    min-height: calc(100vh - 96px);
     // background-image: url('https://www.errenskitchen.com/wp-content/uploads/2020/02/easy-chocolate-dessert-1-1.jpg');
     background-image: url('https://www.foodandwine.com/thmb/ckc6L6xKox0WfpfO6dMkuVGPQOY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Angel-Food-Cake-with-Three-Berry-Compote-FT-RECIPE0323-541a780b871441e0ab14383ee38acc44.jpg');
     background-size: cover;
-
+    padding-top: 60px;
     .container{
         display: flex;
         align-items: flex-end;
