--- a/src/app/components/searched-item/searched-item.component.scss
+++ b/src/app/components/searched-item/searched-item.component.scss
@@ -4,19 +4,39 @@
 .recipe-card {
   display: flex;
   gap: 20px;
+  flex-direction: column;
   padding: 20px;
   max-width: 800px;
   border-bottom: 1px solid $borderColor;
   font-family: $fontFamily;
+  @media (min-width: 600px){
+    flex-direction: row;
+  }
+  @media (min-width: 768px){
+    flex-direction: column;
+  }
+  @media (min-width: 992px){
+    flex-direction: row;
+  }
 
   .image-wrapper {
     flex-shrink: 0;
 
     img {
-      width: 200px;
+      // width: 200px;
+      width: 100%;
       height: auto;
       object-fit: cover;
       border-radius: 4px;
+      @media (min-width: 600px){
+        width: 200px;
+      }
+      @media (min-width: 768px){
+        width: 100%;
+      }
+      @media (min-width: 992px){
+        width: 200px;
+      }
     }
   }
 
@@ -46,9 +66,12 @@
     }
 
     .read-more {
+      display: inline-block;
       @include style-button;
+      line-height: 2.4;
+      padding: 0 12px;
       text-decoration: none;
-      color: inherit
+      color: inherit;
       // padding: 10px 20px;
       // background-color: transparent;
       // border: 1px solid #ccc;
