--- a/src/app/pages/categories/categories.component.scss
+++ b/src/app/pages/categories/categories.component.scss
@@ -4,10 +4,13 @@ ul{
     list-style: none;
     padding: 40px 0;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 2rem;
     @include container;
 
+     @media (min-width: 768px){
+        grid-template-columns: repeat(2, 1fr);
+    }
     @media (min-width: 1024px){
         grid-template-columns: repeat(3, 1fr);
     }
