--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
             <ul>
             @for (recipe of recentRecipes; track recipe.idMeal) {
                     <li class="recipe-li">
-                        <app-recipe-item [recipeItem]="recipe" />
+                        <app-recipe-item [recipeItem]="recipe" [path]="['/recipes', recipe.idMeal]" />
                     </li>
                 }
             </ul>
